@@ -3,6 +3,7 @@ package com.graduationproject.realestate.business.concretes;
 import com.graduationproject.realestate.business.abstracts.ForRentOwnerService;
 import com.graduationproject.realestate.entities.City;
 import com.graduationproject.realestate.entities.ForRentOwner;
+import com.graduationproject.realestate.entities.ImmovablesTypes;
 import com.graduationproject.realestate.entities.Owner;
 import com.graduationproject.realestate.exceptions.ApiRequestException;
 import com.graduationproject.realestate.repository.CityRepository;
@@ -10,12 +11,13 @@ import com.graduationproject.realestate.repository.ForRentOwnerRepository;
 import com.graduationproject.realestate.repository.OwnerRepository;
 import com.graduationproject.realestate.request.ForRentOwnerRequest;
 import com.graduationproject.realestate.response.ForRentOwnerResponse;
+import com.graduationproject.realestate.response.ListByCityResponseO;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
-
+import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -59,7 +61,6 @@ public class ForRentOwnerManager implements ForRentOwnerService {
                 .map(ForRentCityResponse::from)
                 .collect(Collectors.toList());
     }
-
  */
     @Override
     public List<ForRentOwnerResponse> getAllForRentOwnerWithParam(Optional<Long> ownerId) {
@@ -67,9 +68,71 @@ public class ForRentOwnerManager implements ForRentOwnerService {
                 .orElseGet(forRentOwnerRepository::findAll)
                 .stream()
                 .map(ForRentOwnerResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Override
+    public List<ListByCityResponseO> getAllForRentCityWithParam(Optional<Long> cityId) {
+        return cityId.map(forRentOwnerRepository::findByCityId)
+                .orElseGet(forRentOwnerRepository::findAll)
+                .stream()
+                .map(ListByCityResponseO::froms)
+                .toList();
+    }
+
+    @Override
+    public List<ForRentOwnerResponse> getAllByCityName(String cityName, Pageable pageable) {
+        return forRentOwnerRepository.
+                findAllByCity_CityName(cityName,pageable)
+                .stream()
+                .map(ForRentOwnerResponse::from)
+                .toList();
+    }
+
+    @Override
+    public List<ForRentOwnerResponse> getAllByPrice(Long price, Pageable pageable) {
+        return forRentOwnerRepository
+                .findAllByPriceLessThanEqual(price,pageable)
+                .stream()
+                .map(ForRentOwnerResponse::from)
+                .toList();
+    }
+
+    @Override
+    public List<ForRentOwnerResponse> getAllByListingDate(LocalDate listingDate, Pageable pageable) {
+        return forRentOwnerRepository
+                .findAllByListingDateLessThanEqual(listingDate,pageable)
+                .stream()
+                .map(ForRentOwnerResponse::from)
+                .toList();
+    }
+
+    @Override
+    public List<ForRentOwnerResponse> findAllByImmovablesTypes(ImmovablesTypes immovablesTypes, Pageable pageable) {
+        return forRentOwnerRepository
+                .findAllByImmovablesTypes(immovablesTypes,pageable)
+                .stream()
+                .map(ForRentOwnerResponse::from)
+                .toList();
+    }
+
+    @Override
+    public List<ForRentOwnerResponse> findByCityNameAndDistrictAndPrice(Long price,String cityName, String district,  Pageable pageable) {
+        return forRentOwnerRepository
+                .findAllByPriceLessThanEqualAndCity_CityNameAndCity_District(price,cityName, district, pageable)
+                .stream()
+                .map(ForRentOwnerResponse::from)
+                .toList();
+    }
+
+    @Override
+    public List<ForRentOwnerResponse> bigFilter(Long price, int buildingAge, Boolean balcony, Boolean furnished, String cityName, String district, Pageable pageable) {
+        return forRentOwnerRepository
+                .findAllByPriceLessThanEqualAndBuildingAgeIsLessThanEqualAndBalconyAndFurnishedAndCity_CityNameAndCity_District(price, buildingAge, balcony, furnished, cityName, district,pageable)
+                .stream()
+                .map(ForRentOwnerResponse::from)
+                .toList();
+    }
 
     @Override
     public void deleteRent(Long id) {
