@@ -3,17 +3,20 @@ import com.graduationproject.realestate.business.abstracts.ForSaleEstateAgentSer
 import com.graduationproject.realestate.entities.City;
 import com.graduationproject.realestate.entities.EstateAgent;
 import com.graduationproject.realestate.entities.ForSaleEstateAgent;
+import com.graduationproject.realestate.entities.ImmovablesTypes;
 import com.graduationproject.realestate.exceptions.ApiRequestException;
 import com.graduationproject.realestate.repository.CityRepository;
 import com.graduationproject.realestate.repository.EstateAgentRepository;
 import com.graduationproject.realestate.repository.ForSaleEstateAgentRepository;
 import com.graduationproject.realestate.request.ForSaleEstateAgentRequest;
 import com.graduationproject.realestate.response.ForSaleEstateAgentResponse;
+import com.graduationproject.realestate.response.ListByCityResponseE;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,6 +25,7 @@ public class ForSaleEstateAgentManager implements ForSaleEstateAgentService {
     private final ForSaleEstateAgentRepository forSaleEstateAgentRepository;
     private final CityRepository cityRepository;
     private final EstateAgentRepository estateAgentRepository;
+
     @Override
     public ForSaleEstateAgentResponse addEstateAgentSale(ForSaleEstateAgentRequest forSaleEstateAgentRequest) {
         EstateAgent estateAgent = estateAgentRepository.findById(forSaleEstateAgentRequest.getEstateAgentId()).get();
@@ -54,7 +58,7 @@ public class ForSaleEstateAgentManager implements ForSaleEstateAgentService {
                 .orElseGet(forSaleEstateAgentRepository::findAll)
                 .stream()
                 .map(ForSaleEstateAgentResponse::from)
-                .collect(Collectors.toList());
+                .toList();
         /*
         List<ForSale> forSales;
         if(estateAgentId.isPresent()){
@@ -62,9 +66,80 @@ public class ForSaleEstateAgentManager implements ForSaleEstateAgentService {
         }else
             forSales=forSaleRepository.findAll();
         return forSales.stream().map(f->new ForSaleEstateAgentResponse(f)).collect(Collectors.toList());
-
          */
     }
+    @Override
+    public List<ListByCityResponseE> getAllForSaleCityWithParam(Optional<Long> cityId) {
+        return cityId.map(forSaleEstateAgentRepository::findByCityId)
+                .orElseGet(forSaleEstateAgentRepository::findAll)
+                .stream()
+                .map(ListByCityResponseE::froms)
+                .toList();
+    }
+
+    @Override
+    public List<ForSaleEstateAgentResponse> getAllByCityName(String cityName ,Pageable pageable) {
+        return forSaleEstateAgentRepository
+                .findAllByCity_CityName(cityName,pageable)
+                .stream()
+                .map(ForSaleEstateAgentResponse::from)
+                .toList();
+    }
+
+    @Override
+    public List<ForSaleEstateAgentResponse> getAllByPrice(Long price,Pageable pageable) {
+        return forSaleEstateAgentRepository
+                .findAllByPriceLessThanEqual(price,pageable)
+                .stream()
+                .map(ForSaleEstateAgentResponse::from)
+                .toList();
+    }
+
+    @Override
+    public List<ForSaleEstateAgentResponse> getAllCheapHouseByCityName(String cityName,Pageable pageable) {
+        return forSaleEstateAgentRepository
+                .getAllCheapHouseByCityName(cityName,pageable)
+                .stream()
+                .map(ForSaleEstateAgentResponse::from)
+                .toList();
+    }
+
+    @Override
+    public List<ForSaleEstateAgentResponse> findAllByImmovablesTypes(ImmovablesTypes immovablesTypes,Pageable pageable) {
+        return forSaleEstateAgentRepository
+                .findAllByImmovablesTypes(immovablesTypes,pageable)
+                .stream()
+                .map(ForSaleEstateAgentResponse::from)
+                .toList();
+    }
+
+    @Override
+    public List<ForSaleEstateAgentResponse> getAllByListingDate(LocalDate listingDate,Pageable pageable) {
+        return forSaleEstateAgentRepository
+                .findAllByListingDateLessThanEqual(listingDate,pageable)
+                .stream()
+                .map(ForSaleEstateAgentResponse::from)
+                .toList();
+    }
+
+    @Override
+    public List<ForSaleEstateAgentResponse> findByCityNameAndDistrictAndPrice(String cityName, String district, Long price,Pageable pageable) {
+       return forSaleEstateAgentRepository
+               .findAllByPriceLessThanEqualAndCity_CityNameAndCity_District(price,cityName,district,pageable)
+               .stream()
+               .map(ForSaleEstateAgentResponse::from)
+               .toList();
+    }
+
+    @Override
+    public List<ForSaleEstateAgentResponse> bigFilter(Long price, int buildingAge, Boolean balcony, Boolean furnished, String cityName, String district,Pageable pageable) {
+        return forSaleEstateAgentRepository
+                .findAllByPriceLessThanEqualAndBuildingAgeIsLessThanEqualAndBalconyAndFurnishedAndCity_CityNameAndCity_District(price, buildingAge, balcony, furnished, cityName, district,pageable)
+                .stream()
+                .map(ForSaleEstateAgentResponse::from)
+                .toList();
+    }
+
     @Override
     public void deleteSaleEstateAgent(Long id) {
         ForSaleEstateAgent forSale=forSaleEstateAgentRepository.getById(id);
